--- a/PartyGame/know_me/templates/know_me/add_question.html
+++ b/PartyGame/know_me/templates/know_me/add_question.html
@@ -8,14 +8,25 @@
 
 формаaaa
 
+<!--&lt;!&ndash;action=" url 'add_page' %}"&ndash;&gt;-->
+<!--<form method="post">-->
+<!--    {%csrf_token%}-->
+<!--    {{form.as_p}}-->
+<!--&lt;!&ndash;    {{form.question}}&ndash;&gt;-->
+<!--&lt;!&ndash;    <button type="submit">отправить</button>&ndash;&gt;-->
+<!--    <button >отправить</button>-->
+<!--</form>-->
+
+
 <form method="post">
     {%csrf_token%}
-    {{form.as_p}}
-<!--    {{form.question}}-->
-<!--    <button type="submit">отправить</button>-->
+    <div class="form-error">{{ form.non_field_errors }}</div>
+    {% for f in form %}
+        <p><label class="form-label" for="{{ f.id_for_label }}">{{f.label}}: </label>{{ f }}</p>
+        <div class="form-error">{{ f.errors }}</div>
+    {% endfor %}
     <button >отправить</button>
 </form>
-
 
 </body>
 </html>
