--- a/PartyGame/monkey/templates/monkey/test.html
+++ b/PartyGame/monkey/templates/monkey/test.html
@@ -1,14 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>{%block title%}{{ title }}{%endblock%}</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block title %}
+{{title}}
+{% endblock %}
+
 
 {%block content%}
 {{content}}
 {% endblock %}
-
-</body>
-</html>
